# voldemort

./: .classpath  .gitignore  .project  BUGS  CNAME  CONTRIBUTORS  LICENSE  NOTES  NOTICE  README.md  RestSpecAndBasicUnitTest  TODO  admin-tool.html  avro-schema-evolution.html  build-and-push.html  build.gradle  build.properties  build.xml  buildLog  build_number.txt  configuration.html  design.html  developer.html  dummy.html  gradle.properties  index.html  ivy.xml  ivysettings.xml  performance.html  pom.template  pom.xml  quickstart.html  rebalance-new-cluster.sh  rebalance-zone-expansion.sh  rebalance.html  release_notes.txt  settings.gradle  styles.css  tomcat-tasks.properties  web.xml
.externalToolBuilders/: Voldemort_ant_all.launch
_layouts/: default.html
bindings/cpp/: Makefile.am  acinclude.m4  configure.ac  voldemort.pc.in
bindings/cpp/include/voldemort/: ClientConfig.h  InvalidMetadataException.h  SocketStoreClientFactory.h  Store.h  StoreClient.h  StoreClientFactory.h  Version.h  VersionedValue.h  VoldemortException.h  voldemort.h
bindings/cpp/src/: ClientConfig.cpp  Cluster.cpp  Connection.cpp  DefaultStoreClient.cpp  Makefile.am  Node.cpp  ProtocolBuffersRequestFormat.cpp  RoutedStore.cpp  SocketStore.cpp  SocketStoreClientFactory.cpp  TimeBasedInconsistencyResolver.cpp  VectorClock.cpp  VectorClockInconsistencyResolver.cpp  VersionedValue.cpp  VoldemortNativeRequestFormat.cpp  voldemort-client.pb.cc
bindings/cpp/src/include/: Cluster.h  Connection.h  ConnectionPool.h  DefaultStoreClient.h  Node.h  ProtocolBuffersRequestFormat.h  RequestFormat.h  RoutedStore.h  SocketStore.h  VectorClock.h  VoldemortNativeRequestFormat.h
bindings/cpp/src/include/boost/: README
bindings/cpp/test/: Makefile.am  ProtocolBuffersRequestFormat_test.cpp  TimeBasedInconsistencyResolver_test.cpp  VectorClockInconsistencyResolver_test.cpp  VectorClock_test.cpp
bindings/cpp/utils/: .gitignore  Makefile.am  stress.cpp  voldemortShell.cpp
clients/cpp/: .gitignore  Makefile.am  README  acinclude.m4  autogen.sh  configure.ac  voldemort.pc.in
clients/cpp/doc/: .gitignore  Doxyfile-internal.in  Doxyfile.in
clients/cpp/include/voldemort/: BootstrapFailureException.h  ClientConfig.h  InconsistencyResolver.h  InconsistentDataException.h  InsufficientOperationalNodesException.h  InvalidMetadataException.h  ObsoleteVersionException.h  PersistenceFailureException.h  SocketStoreClientFactory.h  Store.h  StoreClient.h  StoreClientFactory.h  StoreOperationFailureException.h  UnreachableStoreException.h  Version.h  VersionedValue.h  VoldemortException.h  voldemort.h
clients/cpp/src/: ClientConfig.cpp  Cluster.cpp  Connection.cpp  ConnectionPool.cpp  InconsistencyResolvingStore.cpp  Makefile.am  Node.cpp  ProtocolBuffersRequestFormat.cpp  RequestFormat.cpp  RoundRobinRoutingStrategy.cpp  RoutedStore.cpp  SocketStore.cpp  SocketStoreClientFactory.cpp  TimeBasedInconsistencyResolver.cpp  VectorClock.cpp  VectorClockInconsistencyResolver.cpp  VersionedValue.cpp  VoldemortNativeRequestFormat.cpp  voldemort-client.pb.cc  voldemort-client.pb.h
clients/cpp/src/include/: Cluster.h  Connection.h  ConnectionPool.h  DefaultStoreClient.h  InconsistencyResolvingStore.h  Node.h  ProtocolBuffersRequestFormat.h  RequestFormat.h  RoundRobinRoutingStrategy.h  RoutedStore.h  RoutingStrategy.h  SocketStore.h  TimeBasedInconsistencyResolver.h  VectorClock.h  VectorClockInconsistencyResolver.h  VoldemortNativeRequestFormat.h
clients/cpp/test/: Makefile.am  ProtocolBuffersRequestFormat_test.cpp  main.cpp
clients/cpp/utils/: .gitignore  Makefile.am  stress.cpp  voldemortShell.cpp
clients/python/: README  setup.cfg  setup.py  slop_pb2.py  test.py  voldemort.py  voldemort_admin_pb2.py  voldemort_client_pb2.py
clients/python/tests/: test_client.py
clients/ruby/: LICENSE  README.md  Rakefile  voldemort-rb.gemspec
config/: log4j.properties  voldemort-env.sh
config/coordinator_sample_config/: config.properties  curl_samples.txt  fatclients_config.avro
config/test_config1/: simple_ops.txt
config/tools/: dummy-stores-2zoned.xml  dummy-stores-3zoned.xml
config/zone_configs/: README
config/zoned_cluster/: README.md
contrib/leveldb/: Makefile  README.md  build_detect_platform.sh  leveldbfpic.patch  make.sh  setenv.sh
contrib/read-only/: ro_cleanup_tool.sh
contrib/ruby-client/: node.rb  store_client.rb  test.rb  voldemort-client.pb.rb  voldemort_exception.rb
contrib/web-manager/: README.md  config.ru  init.rb
docs/: fun_projects.txt  hash_ring.graffle  logical_arch.graffle  physical_arch.graffle  purpose.txt
docs/eclipse_templates/: voldemort-codetemplate.xml  voldemort-eclipse-settings.xml  voldemort_formatter.xml
docs/perf/: draw_graph.sh  notes.txt
example/shell/: example-commands  shell-test-stores.xml
gobblin/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
javadoc/all/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  index.html?voldemort%2Fclient%2Fprotocol%2Fpb%2F%2Fclass-useVAdminProto.FileEntry.Builder.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
javadoc/client/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
js/: ga-include.js
reactor/: pom.xml
reactor/main/: pom.xml
reactor/test/: pom.xml
src/java/: log4j-admin.properties  log4j.properties  log4j2-admin.xml  log4j2.xml
src/proto/: slop.proto  voldemort-admin.proto  voldemort-client.proto  voldemort_protocol.proto
src/python/: store_client.py  test.py  voldemort.py  voldemort_client_pb2.py
test/: TestLZF.java
test/common/: mysql_test_init.sql
test/ec2/: ec2-bench.sh
test/integration/: create_mysql_test.sql  generate_partitions.py  generate_random_data.py  rest.py  simple_test.py
voldemort-contrib/: README.txt
voldemort-protobuf/: README.txt
(+4804 files in other folders)
